--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 
 header {
   height: 50px;
-  background-color: rgb(153, 24, 24);
+  background-color: rgb(78, 228, 33);
   text-align: center;
 }
 
 footer {
   height: 50px;
-  background-color: rgb(153, 24, 24);
+  background-color: rgb(78, 228, 33);
   text-align: center;
   color: black;
 }
@@ -22,10 +22,6 @@ section {
   justify-content: center;
 }
 
-.la header text {
-  color: rgb(196, 78, 0);
-  font-size: 70px;
-}
 .la-all-elements {
   display: flex;
   flex-direction: column;
@@ -33,15 +29,26 @@ section {
 }
 
 .la-title {
-  color: rgb(231, 101, 14);
+  color: rgb(19, 8, 2);
   font-family: "Courier New", Courier, monospace;
   font-size: 70px;
+  margin-top: 30px;
 }
 
-.la-shopping-list-input {
+.la-task-list-input {
+  background-color: rgb(228, 228, 110);
+  padding: 5px;
+  width: 50%;
+  border-width: 10px;
+  border-color: orange;
+  margin-top: 60px;
+  font-size: 30px;
+}
+
+.la-salary-input {
   background-color: rgb(228, 228, 110);
   padding: 10px;
-  width: 90%;
+  width: 50%;
   border-width: 10px;
   border-color: orange;
   margin-top: 60px;
